Add an options page and user whitelist and minimum reactions options

--- a/src/popup.html
+++ b/src/popup.html
@@ -2,8 +2,9 @@
 <html>
     <head>
         <link rel="stylesheet" href="popup.css">
+        <link rel="stylesheet" href="slider.css">
     </head>
-    <body>
+    <body class="popupBody">
         <script src="popup.js"></script>
         <div class="popup">
             <span class="enabledText">Enabled: </span>
