--- a/src/options.html
+++ b/src/options.html
@@ -27,5 +27,5 @@
       </div>
     </div>
   </body>
-  <script src="options.js"></script>
+  <script src="options.js" type="module"></script>
 </html>
