Add titles to options and popup

--- a/src/options.html
+++ b/src/options.html
@@ -3,8 +3,13 @@
   <head>
     <link rel="stylesheet" href="options.css">
     <link rel="stylesheet" href="slider.css">
+    <title>On3 Forum Highlighter Options</title>
   </head>
   <body>
+    <div class="optionsTitle">
+      <img src="/images/on3-highlighter128.png" />
+      <span class="optionsTitleText">Options</span>
+    </div>
     <div class="options">
       <div class="option">
       <span class="enabledText">Enabled: </span>
