--- a/src/popup.html
+++ b/src/popup.html
@@ -6,6 +6,10 @@
     </head>
     <body class="popupBody">
         <script src="popup.js"></script>
+        <div class="popupTitle">
+            <img src="/images/on3-highlighter48.png" />
+            On3 Forum Highlighter
+        </div>
         <div class="popup">
             <span class="enabledText">Enabled: </span>
             <label class="switch">
