Add highlighting mode options: Hide, Dim, Highlight

--- a/src/options.html
+++ b/src/options.html
@@ -19,6 +19,17 @@
         </label>
       </div>
       <div class="option">
+        Mode:
+        <select class="modeSelect" id="modeSelect"></select>
+        <div class="modeSelectDocs">
+          <i>Hide:</i> Non-highlighted posts will be hidden so that only highlighted posts are visible.
+          <br />
+          <i>Dim:</i> Non-highlighted posts will be dimmed so that highlighted posts stand out by contrast.
+          <br />
+          <i>Highlight:</i> Highlighted posts will have a highlighted green background to stand out.
+        </div>
+      </div>
+      <div class="option">
         Configure a whitelist of users whose posts your never want hidden:
         <ul contenteditable="true" id="whitelist">
           <li></li>
